--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Privacy Policy - PHFINCORE</title>
+  <title>Privacy Policy - PHFINCYUTS</title>
 </head>
 <body>
   <h1>Privacy Policy</h1>
   <p><strong>Effective Date:</strong> August 6, 2025</p>
 
-  <p>Thank you for using <strong>PHFINCORE</strong> ("we", "our", or "us"). We value your trust and are committed to protecting your privacy. This Privacy Policy explains how we collect, use, and safeguard your information when you use our mobile application.</p>
+  <p>Thank you for using <strong>PHFINCYUTS</strong> ("we", "our", or "us"). We value your trust and are committed to protecting your privacy. This Privacy Policy explains how we collect, use, and safeguard your information when you use our mobile application.</p>
 
   <h2>1. Information We Collect</h2>
   <p>We may collect certain types of information when you use our app, including:</p>
@@ -34,7 +34,7 @@
   <p>We implement reasonable security measures to protect your information from unauthorized access, disclosure, or loss.</p>
 
   <h2>5. Children's Privacy</h2>
-  <p>PHFINCORE is not intended for children under 13 years of age. We do not knowingly collect personal information from children under 13.</p>
+  <p>PHFINCYUTS is not intended for children under 13 years of age. We do not knowingly collect personal information from children under 13.</p>
 
   <h2>6. Changes to This Privacy Policy</h2>
   <p>We may update this Privacy Policy from time to time. If changes are made, we will update the "Effective Date" at the top of this page. Continued use of the app after such updates indicates your acceptance of the revised policy.</p>
